# crewai_ircc

./: .gitignore  README.md  info.md  links.md  pyproject.toml
src/ircc_research_expert/: main.py
src/ircc_research_expert/crews/immigration_can_research_crew/: immigration_can_research_crew.py
src/ircc_research_expert/crews/immigration_can_research_crew/config/: agents.yaml  tasks.yaml
