[project]
name = "ircc_research_expert"
version = "0.1.0"
description = "ircc_research_expert using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "firecrawl-py>=1.15.0",
]

[project.scripts]
kickoff = "ircc_research_expert.main:kickoff"
run_crew = "ircc_research_expert.main:kickoff"
plot = "ircc_research_expert.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
